--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,14 @@
+/.idea/
 /vendor/
 /app/node_modules/
 /app/dist/
 /app/coverage/
 /app/.idea/
 /backend/auth_users.php
-/70.js
-/192.js
-/294.js
-/476.js
-/530.js
-/538.js
-/574.js
-/642.js
-/831.js
-/905.js
-/970.js
-/main.js
 /styles.css
-/runtime.js
-/polyfills.js
 /data/
 /3rdpartylicenses.txt
 /favicon.ico
 /index.html
-/904.js
+/*.js
+/*.map
