--- a/app/package.json
+++ b/app/package.json
@@ -41,6 +41,6 @@
     "jest": "^27.2.0",
     "jest-preset-angular": "^10.0.0",
     "source-map-explorer": "^2.5.2",
-    "typescript": "^4.4.3"
+    "typescript": "4.3"
   }
 }
