IMLEC-33 Move to /dist and add to ignore

--- a/app/package.json
+++ b/app/package.json
@@ -5,10 +5,10 @@
     "ng": "ng",
     "serve": "ng serve",
     "serve:prod": "ng serve --aot --configuration=production",
-    "build": "ng build --delete-output-path=false",
-    "build:prod": "ng build --aot --configuration=production --delete-output-path=false",
-    "build:prod-stats": "ng build --aot --configuration=production --delete-output-path=false --source-map && source-map-explorer ./../*.js --html ./../stats.html",
-    "watch": "ng build --delete-output-path=false --watch --configuration development",
+    "build": "ng build && cp ../dist/index.html ../index.html",
+    "build:prod": "ng build --aot --configuration=production && cp ../dist/index.html ../index.html",
+    "build:prod-stats": "ng build --aot --configuration=production --source-map && source-map-explorer ./../*.js --html ./../stats.html",
+    "watch": "ng build --watch --configuration development",
     "test": "jest"
   },
   "private": true,
