--- a/app/angular.json
+++ b/app/angular.json
@@ -14,8 +14,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "baseHref": "/imlec/",
-            "deployUrl": "/imlec/",
-            "outputPath": "../",
+            "outputPath": "../dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
