IMLEC-17 Add content endpoint, services, make async

--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "serve": "ng serve",
     "serve:prod": "ng serve --aot --configuration=production",
+    "serve:php": "cd .. && php -S localhost:4201",
     "build": "ng build && cp ../dist/index.html ../index.html",
     "build:prod": "ng build --aot --configuration=production && cp ../dist/index.html ../index.html",
     "build:prod-stats": "ng build --aot --configuration=production --source-map && source-map-explorer ./../*.js --html ./../stats.html",
