--- a/app/package.json
+++ b/app/package.json
@@ -8,35 +8,35 @@
     "serve:php": "cd .. && php -S localhost:4201",
     "build": "ng build && cp ../dist/index.html ../index.html",
     "build:prod": "ng build --aot --configuration=production && cp ../dist/index.html ../index.html",
-    "build:prod-stats": "ng build --aot --configuration=production --source-map && source-map-explorer ./../*.js --html ./../stats.html",
+    "build:prod-stats": "npm run build:prod && source-map-explorer ./../*.js --html ./../stats.html",
     "watch": "ng build --watch --configuration development",
     "test": "jest"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.0.2",
+    "@angular/animations": "^13.1.0",
     "@angular/cdk": "^13.0.2",
-    "@angular/common": "^13.0.2",
-    "@angular/compiler": "^13.0.2",
-    "@angular/core": "^13.0.2",
-    "@angular/forms": "^13.0.2",
+    "@angular/common": "^13.1.0",
+    "@angular/compiler": "^13.1.0",
+    "@angular/core": "^13.1.0",
+    "@angular/forms": "^13.1.0",
     "@angular/material": "^13.0.2",
-    "@angular/platform-browser": "^13.0.2",
-    "@angular/platform-browser-dynamic": "^13.0.2",
-    "@angular/router": "^13.0.2",
-    "@ngrx/effects": "^13.0.1",
-    "@ngrx/entity": "^13.0.1",
-    "@ngrx/router-store": "^13.0.1",
-    "@ngrx/store": "^13.0.1",
-    "@ngrx/store-devtools": "^13.0.1",
-    "rxjs": "^6.5.3",
+    "@angular/platform-browser": "^13.1.0",
+    "@angular/platform-browser-dynamic": "^13.1.0",
+    "@angular/router": "^13.1.0",
+    "@ngrx/effects": "^13.0.2",
+    "@ngrx/entity": "^13.0.2",
+    "@ngrx/router-store": "^13.0.2",
+    "@ngrx/store": "^13.0.2",
+    "@ngrx/store-devtools": "^13.0.2",
+    "rxjs": "^7.4.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.0.3",
     "@angular/cli": "^13.0.3",
-    "@angular/compiler-cli": "^13.0.2",
+    "@angular/compiler-cli": "^13.1.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.9.1",
     "jest": "^27.2.0",
