--- a/app/package.json
+++ b/app/package.json
@@ -9,39 +9,39 @@
     "build": "ng build && cp ../dist/index.html ../index.html",
     "build:prod": "ng build --aot --configuration=production && cp ../dist/index.html ../index.html",
     "build:prod-stats": "npm run build:prod && source-map-explorer ./../*.js --html ./../stats.html",
-    "watch": "ng build --watch --configuration development",
+    "watch": "ng build --watch",
     "test": "jest"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.1.0",
-    "@angular/cdk": "^13.0.2",
-    "@angular/common": "^13.1.0",
-    "@angular/compiler": "^13.1.0",
-    "@angular/core": "^13.1.0",
-    "@angular/forms": "^13.1.0",
-    "@angular/material": "^13.0.2",
-    "@angular/platform-browser": "^13.1.0",
-    "@angular/platform-browser-dynamic": "^13.1.0",
-    "@angular/router": "^13.1.0",
-    "@ngrx/effects": "^13.0.2",
-    "@ngrx/entity": "^13.0.2",
-    "@ngrx/router-store": "^13.0.2",
-    "@ngrx/store": "^13.0.2",
-    "@ngrx/store-devtools": "^13.0.2",
+    "@angular/animations": "^14.1.0",
+    "@angular/cdk": "^14.1.0",
+    "@angular/common": "^14.1.0",
+    "@angular/compiler": "^14.1.0",
+    "@angular/core": "^14.1.0",
+    "@angular/forms": "^14.1.0",
+    "@angular/material": "^14.1.0",
+    "@angular/platform-browser": "^14.1.0",
+    "@angular/platform-browser-dynamic": "^14.1.0",
+    "@angular/router": "^14.1.0",
+    "@ngrx/effects": "^14.0.2",
+    "@ngrx/entity": "^14.0.2",
+    "@ngrx/router-store": "^14.0.2",
+    "@ngrx/store": "^14.0.2",
+    "@ngrx/store-devtools": "^14.0.2",
     "rxjs": "^7.4.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.0.3",
-    "@angular/cli": "^13.0.3",
-    "@angular/compiler-cli": "^13.1.0",
-    "@types/jest": "^27.0.1",
+    "@angular-devkit/build-angular": "^14.1.0",
+    "@angular/cli": "^14.1.0",
+    "@angular/compiler-cli": "^14.1.0",
+    "@types/jest": "^28.1.6",
     "@types/node": "^16.9.1",
-    "jest": "^27.2.0",
-    "jest-preset-angular": "^11.0.0",
+    "jest": "^28.1.3",
+    "jest-preset-angular": "^12.2.0",
     "source-map-explorer": "^2.5.2",
-    "typescript": "4.4.4"
+    "typescript": "4.7.4"
   }
 }
