--- a/app/tsconfig.spec.json
+++ b/app/tsconfig.spec.json
@@ -2,6 +2,8 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "esModuleInterop": true,
     "outDir": "./out-tsc/spec",
     "types": [
       "node",
