--- a/app/package.json
+++ b/app/package.json
@@ -4,44 +4,44 @@
   "scripts": {
     "ng": "ng",
     "serve": "ng serve",
-    "serve:prod": "ng serve --aot --configuration=production",
+    "serve:prod": "ng serve --configuration=production",
     "serve:php": "cd .. && php -S localhost:4201",
     "build": "ng build",
-    "build:prod": "ng build --aot --configuration=production",
+    "build:prod": "ng build --configuration=production",
     "build:prod-stats": "npm run build:prod && source-map-explorer ./../*.js --html ./../stats.html",
     "watch": "ng build --watch",
     "test": "jest"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.4",
-    "@angular/cdk": "^15.0.3",
-    "@angular/common": "^15.0.4",
-    "@angular/compiler": "^15.0.4",
-    "@angular/core": "^15.0.4",
-    "@angular/forms": "^15.0.4",
-    "@angular/material": "^15.0.3",
-    "@angular/platform-browser": "^15.0.4",
-    "@angular/platform-browser-dynamic": "^15.0.4",
-    "@angular/router": "^15.0.4",
-    "@ngrx/effects": "^15.1.0",
-    "@ngrx/entity": "^15.1.0",
-    "@ngrx/router-store": "^15.1.0",
-    "@ngrx/store": "^15.1.0",
-    "@ngrx/store-devtools": "^15.1.0",
+    "@angular/animations": "^17.3.6",
+    "@angular/cdk": "^17.3.6",
+    "@angular/common": "^17.3.6",
+    "@angular/compiler": "^17.3.6",
+    "@angular/core": "^17.3.6",
+    "@angular/forms": "^17.3.6",
+    "@angular/material": "^17.3.6",
+    "@angular/platform-browser": "^17.3.6",
+    "@angular/platform-browser-dynamic": "^17.3.6",
+    "@angular/router": "^17.3.6",
+    "@ngrx/effects": "^17.2.0",
+    "@ngrx/entity": "^17.2.0",
+    "@ngrx/router-store": "^17.2.0",
+    "@ngrx/store": "^17.2.0",
+    "@ngrx/store-devtools": "^17.2.0",
     "rxjs": "^7.4.0",
-    "tslib": "^2.3.1",
-    "zone.js": "~0.11.4"
+    "tslib": "^2.6.2",
+    "zone.js": "~0.14.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.4",
-    "@angular/cli": "^15.0.4",
-    "@angular/compiler-cli": "^15.0.4",
-    "@types/jest": "^29.5.0",
-    "@types/node": "^16.9.1",
-    "jest": "^29.5.0",
-    "jest-preset-angular": "^13.0.1",
+    "@angular-devkit/build-angular": "^17.3.6",
+    "@angular/cli": "^17.3.6",
+    "@angular/compiler-cli": "^17.3.6",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.7",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.0.1",
     "source-map-explorer": "^2.5.2",
-    "typescript": "4.8.4"
+    "typescript": "5.4.5"
   }
 }
