IMLEC-47 Migrate jest to vitest

--- a/app/tsconfig.base.json
+++ b/app/tsconfig.base.json
@@ -22,8 +22,7 @@
     "allowJs": true,
     "esModuleInterop": true,
     "types": [
-      "node",
-      "jest"
+      "node"
     ]
   },
   "angularCompilerOptions": {
