--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,8 @@
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "read-excel-file": "^5.8.8"
+    "read-excel-file": "^5.8.8",
+    "vitest": "^3.2.4"
   },
   "devDependencies": {
     "@types/compression": "^1.8.1",
