--- a/app/angular.json
+++ b/app/angular.json
@@ -98,6 +98,9 @@
               "devServerTarget": "IMLEC:serve:production"
             }
           }
+        },
+        "test": {
+          "builder": "@analogjs/vitest-angular:test"
         }
       }
     }
