--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,7 @@
     "build:prod": "ng build --configuration=production",
     "build:prod-stats": "npm run build:prod && source-map-explorer ./../*.js --html ./../stats.html",
     "watch": "ng build --watch",
-    "test": "jest"
+    "test": "vitest --run"
   },
   "private": true,
   "dependencies": {
@@ -26,23 +26,24 @@
     "@angular/router": "^20.2.1",
     "@ngrx/effects": "^20.0.1",
     "@ngrx/entity": "^20.0.1",
+    "@ngrx/operators": "^18.0.0",
     "@ngrx/router-store": "^20.0.1",
     "@ngrx/store": "^20.0.1",
     "@ngrx/store-devtools": "^20.0.1",
     "rxjs": "^7.4.0",
     "tslib": "^2.6.2",
-    "zone.js": "~0.15.1",
-    "@ngrx/operators": "^18.0.0"
+    "zone.js": "~0.15.1"
   },
   "devDependencies": {
+    "@analogjs/vite-plugin-angular": "^1.20.2",
+    "@analogjs/vitest-angular": "^1.21.0",
     "@angular-devkit/build-angular": "^20.2.0",
     "@angular/cli": "^20.2.0",
     "@angular/compiler-cli": "^20.2.1",
-    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
-    "jest": "^29.7.0",
-    "jest-preset-angular": "^14.0.1",
+    "jsdom": "^26.1.0",
     "source-map-explorer": "^2.5.2",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "vitest": "^3.2.4"
   }
 }
